# exp-agent

./: .env  README.md  agent.md  agent.py  agent2.md  agent2.py  bazel.py  delete.py  example.py  pyproject.toml  system_prompt.txt  tools.md  tools.py  vuln-old.csv  vuln.csv  vuln39.xlsx
11-aes_force_masks_enable/: README.md  aes_force_masks_poc_test.c
11-success/: BUILD  aes_force_masks_backdoor_test.c
agent_output/1-aes_keyshare1_read_alias/: README.md
agent_output/1-success-2/: README.md
agent_output/1-success-aes_keyshare1_read_alias/: README.md  aes_keyshare1_read_alias_test.c
agent_output/10-otbn_imem_dmem_blanker_disabled/: BUILD  README.md  otbn_blanking_vuln_test.c
agent_output/10-timeout-otbn_imem_dmem_blanker_disabled/: BUILD
agent_output/11-aes_force_masks_vuln/: BUILD  README.md  aes_force_masks_vuln_test.c
agent_output/11-success-aes_force_masks_vuln/: BUILD  aes_force_masks_vuln_test.c
agent_output/12-hmac_key_read_via_rdata_mux/: BUILD
agent_output/12-testfail-hmac_key_read_via_rdata_mux/: BUILD  hmac_vuln_read_test.c
agent_output/13-aes_key_share_read_vuln/: BUILD  README.md
agent_output/13-fail-aes_key_share_read_vuln/: BUILD
agent_output/14-aes_prev_data_not_cleared/: BUILD
agent_output/14-testfail-aes_prev_data_not_cleared/: aes_prev_data_wipe_vuln_test.c
index/: README.md  base.md  crypto.md  dif.md  lib.md  runtime.md  testing.md  tests.md  top.md
opentitan/: bazel-bin  bazel-opentitan  bazel-out  bazel-testlogs  buggy_file_db.json  official_file_db.json  rom_ctrl.py
vuln_report/: vuln.csv  vuln1.csv
(+149 files in other folders)
